-added checking of files to see if content is different between latest file and current file